2010-07-29  Lin Ma  <Lin.Ma@Sun.COM>

	* configure.in: Bump to 1.146.0

2010-07-21  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_profile_dialog.c (nwam_connection_cell_func): Fixed
	16600 [NWAM] Show Wired/Wireless in Edit Connections dialog

2010-07-21  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_ncu.c (nwamui_object_real_commit),
	(nwamui_object_real_set_enabled): I think disable a NCU should set
	'enabled' prop to false for every NCU subobject.

2010-07-21  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/main.c:
	* common/nwamui_daemon.c (nwam_loc_walker_cb),
	(nwam_enm_walker_cb), (nwam_ncp_walker_cb),
	(nwam_known_wlan_walker_cb):
	* common/nwamui_enm.c (nwamui_enm_class_init), (nwamui_enm_new),
	(nwamui_enm_new_with_handle), (nwamui_object_real_open),
	(nwamui_object_real_reload):
	* common/nwamui_env.c (nwamui_env_class_init), (nwamui_env_new),
	(nwamui_env_new_with_handle), (nwamui_object_real_open),
	(nwamui_object_real_reload):
	* common/nwamui_known_wlan.c (nwamui_known_wlan_class_init),
	(nwamui_object_real_reload), (nwamui_known_wifi_new),
	(nwamui_known_wlan_new_with_handle), (nwamui_object_real_open):
	* common/nwamui_ncp.c (nwamui_ncp_class_init), (nwamui_ncp_new),
	(nwamui_ncp_new_with_handle), (nwamui_object_real_reload),
	(nwamui_object_real_open):
	* common/nwamui_ncu.c (nwamui_ncu_class_init),
	(nwamui_ncu_new_with_handle), (nwamui_object_real_reload),
	(nwamui_object_real_open):
	* common/nwamui_object.c (nwamui_object_open),
	(nwamui_object_event), (nwamui_object_add), (nwamui_object_remove):
	* common/nwamui_object.h: Clean some code. Probably fixed 6968008
	core.i86pc.nwam-manager excessive core file generation on snv_142

2010-06-29  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_wireless_dialog.c
	(nwam_wireless_dialog_set_key_index),
	(nwam_wireless_dialog_get_key_index):
	* capplet/nwam_wireless_dialog.h: Fixed 16390 [osol_142]
	nwam-manager cores when joining a unlisted wireless network with
	WEP security

2010-06-04  Lin Ma  <Lin.Ma@Sun.COM>
