@@ -1,3 +1,11 @@
+2010-09-13  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* common/libnwamui.c (nwamui_util_ncp_init_acquired_ip),
+	(nwamui_util_get_interface_address): Fixed build issue on nv147
+	due to 'struct ifaddrs' changes.
+	* ui/nwam-manager-properties.ui: Fixed some demo numbers are
+	marked as translation needed.
+
 2010-07-29  Lin Ma  <Lin.Ma@Sun.COM>
 
 	* configure.in: Bump to 1.146.0
